# electricity-price-forecast

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
configs/: config.yaml
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  backtest_report.md  data_dictionary.md  results_analysis.md
scripts/: backtest.py  build_features.py  fetch_data.py  generate_sample_data.py  train.py
src/electricity_forecast/: __init__.py  cli.py
src/electricity_forecast/app/: streamlit_app.py
src/electricity_forecast/config/: __init__.py  loader.py
src/electricity_forecast/evaluation/: __init__.py  backtest.py  metrics.py  plots.py  strategy.py
src/electricity_forecast/ingestion/: __init__.py  gridstatus_client.py  pjm_client.py  schemas.py  weather_client.py
src/electricity_forecast/mlops/: __init__.py  drift.py  monitor.py  registry.py  tracking.py
src/electricity_forecast/models/: __init__.py  base.py  baselines.py  calibrate.py  lstm.py  sarimax.py  xgb.py
src/electricity_forecast/serving/: __init__.py  api.py  predict.py
src/electricity_forecast/transforms/: __init__.py  clean.py  features.py  splits.py
tests/: __init__.py  conftest.py  test_features_leakage.py  test_package.py  test_predict_contract.py
